--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,5 +1,21 @@
 2018-03-20  Jason Marcell  <jmarcell@apple.com>
 
+        Cherry-pick r229366. rdar://problem/38651632
+
+    2018-03-06  Filip Pizlo  <fpizlo@apple.com>
+
+            MarkedArgumentsBuffer should allocate from the JSValue Gigacage
+            https://bugs.webkit.org/show_bug.cgi?id=183377
+
+            Reviewed by Michael Saboff.
+
+            That prevents it from being used to pivot UAF on malloc memory into corruption in the JS heap.
+
+            * runtime/ArgList.cpp:
+            (JSC::MarkedArgumentBuffer::expandCapacity):
+
+2018-03-20  Jason Marcell  <jmarcell@apple.com>
+
         Cherry-pick r229109. rdar://problem/38651610
 
     2018-02-28  JF Bastien  <jfbastien@apple.com>
