--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,21 @@
+2018-03-20  Jason Marcell  <jmarcell@apple.com>
+
+        Cherry-pick r229483. rdar://problem/38651620
+
+    2018-03-09  Youenn Fablet  <youenn@apple.com>
+
+            ServiceWorker should respect IDB and DOMCache partitioning
+            https://bugs.webkit.org/show_bug.cgi?id=183496
+
+            Reviewed by Brady Eidson.
+
+            Test: http/wpt/service-workers/third-party-registration.html
+
+            Set the correct top origin of service worker ScriptExecutionContext.
+
+            * workers/service/context/ServiceWorkerThread.cpp:
+            (WebCore::ServiceWorkerThread::ServiceWorkerThread):
+
 2018-03-11  Jason Marcell  <jmarcell@apple.com>
 
         Cherry-pick r229086. rdar://problem/37992301
