--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,20 @@
 2018-03-20  Jason Marcell  <jmarcell@apple.com>
 
+        Cherry-pick r229505. rdar://problem/38651624
+
+    2018-03-09  Zalan Bujtas  <zalan@apple.com>
+
+            Turn off offset*/scroll* optimization for input elements with shadow content
+            https://bugs.webkit.org/show_bug.cgi?id=182383
+            <rdar://problem/37114190>
+
+            Reviewed by Antti Koivisto.
+
+            * fast/forms/scrollheight-with-mutation-crash-expected.txt: Added.
+            * fast/forms/scrollheight-with-mutation-crash.html: Added.
+
+2018-03-20  Jason Marcell  <jmarcell@apple.com>
+
         Cherry-pick r229483. rdar://problem/38651620
 
     2018-03-09  Youenn Fablet  <youenn@apple.com>
