--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,5 +1,22 @@
 2018-03-20  Jason Marcell  <jmarcell@apple.com>
 
+        Cherry-pick r229614. rdar://problem/38651603
+
+    2018-03-14  Youenn Fablet  <youenn@apple.com>
+
+            MessagePort should remove its listeners when being closed
+            https://bugs.webkit.org/show_bug.cgi?id=183644
+
+            Reviewed by Chris Dumez.
+
+            Test: http/tests/workers/worker-messageport.html
+
+            * dom/MessagePort.cpp:
+            (WebCore::MessagePort::close):
+            (WebCore::MessagePort::contextDestroyed):
+
+2018-03-20  Jason Marcell  <jmarcell@apple.com>
+
         Cherry-pick r229505. rdar://problem/38651624
 
     2018-03-09  Zalan Bujtas  <zalan@apple.com>
