--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,21 @@
 2018-03-20  Jason Marcell  <jmarcell@apple.com>
 
+        Cherry-pick r229691. rdar://problem/38651615
+
+    2018-03-16  Youenn Fablet  <youenn@apple.com>
+
+            Add a test verifying that an AppCache manifest request includes credentials
+            https://bugs.webkit.org/show_bug.cgi?id=183716
+
+            Reviewed by Chris Dumez.
+
+            * http/tests/appcache/appcache-cookies-expected.txt: Added.
+            * http/tests/appcache/appcache-cookies.html: Added.
+            * http/tests/appcache/resources/appcache-cookies-test.html: Added.
+            * http/tests/appcache/resources/manifest-if-cookie.php: Added.
+
+2018-03-20  Jason Marcell  <jmarcell@apple.com>
+
         Cherry-pick r229614. rdar://problem/38651603
 
     2018-03-14  Youenn Fablet  <youenn@apple.com>
