--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,21 @@
 2018-03-20  Jason Marcell  <jmarcell@apple.com>
 
+        Cherry-pick r229733. rdar://problem/38651613
+
+    2018-03-19  Brady Eidson  <beidson@apple.com>
+
+            Add a layout test verifying AppCache resource fetches have the document's cookie in place.
+            https://bugs.webkit.org/show_bug.cgi?id=183757
+
+            Reviewed by Alex Christensen.
+
+            * http/tests/appcache/document-cookie-expected.txt: Added.
+            * http/tests/appcache/document-cookie.php: Added.
+            * http/tests/appcache/resources/cookie-protected-script.php: Added.
+            * http/tests/appcache/resources/document-cookie.manifest: Added.
+
+2018-03-20  Jason Marcell  <jmarcell@apple.com>
+
         Cherry-pick r229691. rdar://problem/38651615
 
     2018-03-16  Youenn Fablet  <youenn@apple.com>
