--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,5 +1,27 @@
 2018-03-20  Jason Marcell  <jmarcell@apple.com>
 
+        Apply patch. rdar://problem/38651613
+
+    2018-03-20  Youenn Fablet  <youenn@apple.com>
+
+            REGRESSION (iOS 11.3): WKWebView does not send cookies for cache manifest request.
+            rdar://problem/38505756.
+
+            Reviewed by Brady Eidson
+
+            Covered by tests added in https://bugs.webkit.org/show_bug.cgi?id=183716
+            and https://bugs.webkit.org/show_bug.cgi?id=183757
+
+            Get the document cookie when trying to load the cache manifest.
+            Use that cookie for the cache manifest and all cached resource.
+
+            * loader/appcache/ApplicationCacheGroup.cpp:
+            (WebCore::ApplicationCacheGroup::update):
+            (WebCore::ApplicationCacheGroup::createResourceHandle):
+            * loader/appcache/ApplicationCacheGroup.h:
+
+2018-03-20  Jason Marcell  <jmarcell@apple.com>
+
         Cherry-pick r229643. rdar://problem/38651639
 
     2018-03-15  Keith Rollin  <krollin@apple.com>
