--- a/Source/WebKitLegacy/mac/ChangeLog
+++ b/Source/WebKitLegacy/mac/ChangeLog
@@ -1,3 +1,7 @@
+2018-03-21  Jason Marcell  <jmarcell@apple.com>
+
+        Revert r229414. rdar://problem/38651634
+
 2018-03-20  Jason Marcell  <jmarcell@apple.com>
 
         Cherry-pick r229414. rdar://problem/38651634
