--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,25 @@
+2018-03-21  Jason Marcell  <jmarcell@apple.com>
+
+        Cherry-pick r229585. rdar://problem/38681880
+
+    2018-03-13  Youenn Fablet  <youenn@apple.com>
+
+            Changing link element rel attribute from preload to stylesheet should succeed loading the stylesheet
+            https://bugs.webkit.org/show_bug.cgi?id=183601
+            <rdar://problem/38309441>
+
+            Reviewed by Antti Koivisto.
+
+            Test: http/wpt/preload/change-link-rel-attribute.html
+
+            * loader/LinkPreloadResourceClients.h:
+            (WebCore::LinkPreloadResourceClient::clearResource): Remove the call to CachedResource::cancelLoad.
+            This call is expected to be called by ResourceLoader when cancelling the load from below CachedResource.
+            * loader/cache/CachedResource.cpp:
+            (WebCore::CachedResource::allClientsRemoved): In case of preload,
+            cancel the load if not finished when there is no more client attached to it.
+            * loader/cache/CachedResource.h:
+
 2018-03-20  Jason Marcell  <jmarcell@apple.com>
 
         Apply patch. rdar://problem/38651613
