--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,38 @@
 2018-03-21  Jason Marcell  <jmarcell@apple.com>
 
+        Cherry-pick r229297. rdar://problem/38682578
+
+    2018-03-05  Andy Estes  <aestes@apple.com>
+
+            [Mac] Teach WebCore::Pasteboard about file promise drags
+            https://bugs.webkit.org/show_bug.cgi?id=183314
+            <rdar://problem/38105493>
+
+            Reviewed by Darin Adler.
+
+            Added versions of file dragging tests in editing/pasteboard/ that use
+            beginDragWithFilePromises() instead of beginDragWithFiles().
+
+            * TestExpectations: Skipped the new tests.
+            * editing/pasteboard/data-transfer-items-drag-drop-file-promise-expected.txt: Added.
+            * editing/pasteboard/data-transfer-items-drag-drop-file-promise.html: Added.
+            * editing/pasteboard/data-transfer-items-drop-file-promise-expected.txt: Added.
+            * editing/pasteboard/data-transfer-items-drop-file-promise.html: Added.
+            * editing/pasteboard/datatransfer-items-drop-plaintext-file-promise-expected.txt: Added.
+            * editing/pasteboard/datatransfer-items-drop-plaintext-file-promise.html: Added.
+            * editing/pasteboard/datatransfer-types-dropping-text-file-promise-expected.txt: Added.
+            * editing/pasteboard/datatransfer-types-dropping-text-file-promise.html: Added.
+            * editing/pasteboard/drag-file-promises-to-editable-element-as-URLs-expected.txt: Added.
+            * editing/pasteboard/drag-file-promises-to-editable-element-as-URLs.html: Added.
+            * editing/pasteboard/drag-file-promises-to-editable-element-as-attachment-expected.txt: Added.
+            * editing/pasteboard/drag-file-promises-to-editable-element-as-attachment.html: Added.
+            * editing/pasteboard/file-input-files-access-promise-expected.txt: Added.
+            * editing/pasteboard/file-input-files-access-promise.html: Added.
+            * platform/mac-wk1/TestExpectations: Un-skipped the new tests.
+            * platform/win/TestExpectations: Skipped the new tests.
+
+2018-03-21  Jason Marcell  <jmarcell@apple.com>
+
         Cherry-pick r229585. rdar://problem/38681880
 
     2018-03-13  Youenn Fablet  <youenn@apple.com>
