--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,58 @@
 2019-10-14  Alan Coon  <alancoon@apple.com>
 
+        Cherry-pick r251086. rdar://problem/56237426
+
+    [Cocoa] REGRESSION (r245672): Contenteditable with optical sizing freezes Safari
+    https://bugs.webkit.org/show_bug.cgi?id=202262
+    
+    Reviewed by Tim Horton.
+    
+    Source/WebKit:
+    
+    r250640 didn't go far enough. We need to apply the same fix everywhere [NSFontDescriptor fontDescriptorWithFontAttributes:] is called.
+    
+    * Shared/Cocoa/ArgumentCodersCocoa.mm:
+    (IPC::decodeFontInternal):
+    * Shared/Cocoa/CoreTextHelpers.h: Added.
+    * Shared/Cocoa/CoreTextHelpers.mm: Added.
+    (fontDescriptorWithFontAttributes):
+    * SourcesCocoa.txt:
+    * UIProcess/Cocoa/WebViewImpl.mm:
+    (WebKit::WebViewImpl::updateFontManagerIfNeeded):
+    * UIProcess/mac/WebPopupMenuProxyMac.mm:
+    (WebKit::WebPopupMenuProxyMac::showPopupMenu):
+    * WebKit.xcodeproj/project.pbxproj:
+    
+    LayoutTests:
+    
+    * fast/forms/contenteditable-font-optical-size-expected.txt: Added.
+    * fast/forms/contenteditable-font-optical-size.html: Added.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251086 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-14  Myles C. Maxfield  <mmaxfield@apple.com>
+
+            [Cocoa] REGRESSION (r245672): Contenteditable with optical sizing freezes Safari
+            https://bugs.webkit.org/show_bug.cgi?id=202262
+
+            Reviewed by Tim Horton.
+
+            r250640 didn't go far enough. We need to apply the same fix everywhere [NSFontDescriptor fontDescriptorWithFontAttributes:] is called.
+
+            * Shared/Cocoa/ArgumentCodersCocoa.mm:
+            (IPC::decodeFontInternal):
+            * Shared/Cocoa/CoreTextHelpers.h: Added.
+            * Shared/Cocoa/CoreTextHelpers.mm: Added.
+            (fontDescriptorWithFontAttributes):
+            * SourcesCocoa.txt:
+            * UIProcess/Cocoa/WebViewImpl.mm:
+            (WebKit::WebViewImpl::updateFontManagerIfNeeded):
+            * UIProcess/mac/WebPopupMenuProxyMac.mm:
+            (WebKit::WebPopupMenuProxyMac::showPopupMenu):
+            * WebKit.xcodeproj/project.pbxproj:
+
+2019-10-14  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r250197. rdar://problem/55611999
 
     Fix an assertion failure introduced in r250186.
