--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,57 @@
+2019-10-16  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r251188. rdar://problem/56340800
+
+    WebAudioSourceProviderAVFObjC::provideInput should set its WebAudioBufferList parameters correctly
+    https://bugs.webkit.org/show_bug.cgi?id=202930
+    <rdar://problem/56006776>
+    
+    Reviewed by Eric Carlson.
+    
+    Source/WebCore:
+    
+    There is a time where the bus channel number and audio source channel numbers may be different.
+    In case the bus channel number is less than the audio source channel number, initialization of
+    the WebAudioBufferList might not be fully done.
+    In that case, output silence and return early.
+    Reduce the number of frames to process based on the number of frames the output audio bus plans to process.
+    
+    Partially covered by new API test (this a race so we cannot reproduce the crash easily).
+    
+    * Modules/webaudio/MediaStreamAudioSourceNode.cpp:
+    (WebCore::MediaStreamAudioSourceNode::process):
+    Make sure to process the number of frames the output bus expect.
+    * platform/mediastream/mac/WebAudioSourceProviderAVFObjC.mm:
+    (WebCore::WebAudioSourceProviderAVFObjC::provideInput):
+    
+    Tools:
+    
+    Add a test that has an audio track that goes from 1 to 2 channels while being piped to a WebAudio pipeline.
+    
+    * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+    * TestWebKitAPI/Tests/WebKit/GetUserMedia.mm:
+    (-[GUMMessageHandler userContentController:didReceiveScriptMessage:]):
+    (TestWebKitAPI::TEST):
+    * TestWebKitAPI/Tests/WebKit/getUserMedia-webaudio.html: Added.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251188 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-16  Youenn Fablet  <youenn@apple.com>
+
+            WebAudioSourceProviderAVFObjC::provideInput should set its WebAudioBufferList parameters correctly
+            https://bugs.webkit.org/show_bug.cgi?id=202930
+            <rdar://problem/56006776>
+
+            Reviewed by Eric Carlson.
+
+            Add a test that has an audio track that goes from 1 to 2 channels while being piped to a WebAudio pipeline.
+
+            * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+            * TestWebKitAPI/Tests/WebKit/GetUserMedia.mm:
+            (-[GUMMessageHandler userContentController:didReceiveScriptMessage:]):
+            (TestWebKitAPI::TEST):
+            * TestWebKitAPI/Tests/WebKit/getUserMedia-webaudio.html: Added.
+
 2019-10-09  Kocsen Chung  <kocsen_chung@apple.com>
 
         Cherry-pick r250887. rdar://problem/56104999
