--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,79 @@
+2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
+
+        Cherry-pick r249517. rdar://problem/56000099
+
+    Mail appears to be double inverting code copied from Notes, Xcode, or Terminal.
+    https://bugs.webkit.org/show_bug.cgi?id=201368
+    rdar://problem/40529867
+    
+    Reviewed by Ryosuke Niwa.
+    
+    Source/WebCore:
+    
+    Dark mode content that is pasted should have the inline styles inverse color
+    transformed by the color filter to match the color filtered document contents.
+    
+    Layout Test: editing/pasteboard/paste-dark-mode-color-filtered.html
+    API Tests: PasteHTML.TransformColorsOfDarkContent, PasteHTML.DoesNotTransformColorsOfLightContent,
+        PasteRTFD.TransformColorsOfDarkContent, PasteRTFD.DoesNotTransformColorsOfLightContent
+    
+    * editing/EditingStyle.cpp:
+    (WebCore::EditingStyle::inverseTransformColorIfNeeded): Added caret-color to the transformed properties.
+    * editing/ReplaceSelectionCommand.cpp:
+    (WebCore::fragmentNeedsColorTransformed): Added.
+    (WebCore::ReplaceSelectionCommand::inverseTransformColor): Added.
+    (WebCore::ReplaceSelectionCommand::doApply): Call fragmentNeedsColorTransformed() and inverseTransformColor().
+    * editing/ReplaceSelectionCommand.h:
+    
+    Tools:
+    
+    Added Tests: PasteHTML.TransformColorsOfDarkContent, PasteHTML.DoesNotTransformColorsOfLightContent,
+        PasteRTFD.TransformColorsOfDarkContent, PasteRTFD.DoesNotTransformColorsOfLightContent
+    
+    * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+    * TestWebKitAPI/Tests/WebKitCocoa/PasteHTML.mm:
+    (createWebViewWithCustomPasteboardDataSetting): Added argument to enable color filter.
+    * TestWebKitAPI/Tests/WebKitCocoa/PasteRTFD.mm:
+    (createWebViewWithCustomPasteboardDataEnabled): Added argument to enable color filter.
+    * TestWebKitAPI/Tests/WebKitCocoa/rich-color-filtered.html: Added.
+    * TestWebKitAPI/cocoa/TestWKWebView.h:
+    * TestWebKitAPI/cocoa/TestWKWebView.mm:
+    (-[TestWKWebView forceDarkMode]):
+    
+    LayoutTests:
+    
+    * TestExpectations:
+    * editing/pasteboard/paste-dark-mode-color-filtered-expected.txt: Added.
+    * editing/pasteboard/paste-dark-mode-color-filtered.html: Added.
+    * platform/ios-12/TestExpectations:
+    * platform/ios/TestExpectations:
+    * platform/mac/TestExpectations:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249517 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-09-04  Timothy Hatcher  <timothy@apple.com>
+
+            Mail appears to be double inverting code copied from Notes, Xcode, or Terminal.
+            https://bugs.webkit.org/show_bug.cgi?id=201368
+            rdar://problem/40529867
+
+            Reviewed by Ryosuke Niwa.
+
+            Dark mode content that is pasted should have the inline styles inverse color
+            transformed by the color filter to match the color filtered document contents.
+
+            Layout Test: editing/pasteboard/paste-dark-mode-color-filtered.html
+            API Tests: PasteHTML.TransformColorsOfDarkContent, PasteHTML.DoesNotTransformColorsOfLightContent,
+                PasteRTFD.TransformColorsOfDarkContent, PasteRTFD.DoesNotTransformColorsOfLightContent
+
+            * editing/EditingStyle.cpp:
+            (WebCore::EditingStyle::inverseTransformColorIfNeeded): Added caret-color to the transformed properties.
+            * editing/ReplaceSelectionCommand.cpp:
+            (WebCore::fragmentNeedsColorTransformed): Added.
+            (WebCore::ReplaceSelectionCommand::inverseTransformColor): Added.
+            (WebCore::ReplaceSelectionCommand::doApply): Call fragmentNeedsColorTransformed() and inverseTransformColor().
+            * editing/ReplaceSelectionCommand.h:
+
 2019-10-04  Kocsen Chung  <kocsen_chung@apple.com>
 
         Cherry-pick r249436. rdar://problem/55989217
