--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,53 @@
 2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
 
+        Cherry-pick r250431. rdar://problem/55927251
+
+    Storage Access API: document.hasStorageAccess() should return false by default
+    https://bugs.webkit.org/show_bug.cgi?id=202281
+    <rdar://problem/55718526>
+    
+    Reviewed by Alex Christensen.
+    
+    document.hasStorageAccess() should return false by default so that it only
+    returns true if the context has asked for and been granted storage access.
+    
+    Source/WebKit:
+    
+    * NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
+    (WebKit::ResourceLoadStatisticsDatabaseStore::hasStorageAccess):
+    * NetworkProcess/Classifier/ResourceLoadStatisticsMemoryStore.cpp:
+    (WebKit::ResourceLoadStatisticsMemoryStore::hasStorageAccess):
+    
+    LayoutTests:
+    
+    * http/tests/storageAccess/has-storage-access-false-by-default-expected.txt: Added.
+    * http/tests/storageAccess/has-storage-access-false-by-default.html: Added.
+    * platform/ios/TestExpectations:
+        The new test is marked as [ Pass ].
+    * platform/mac-wk2/TestExpectations:
+        The new test is marked as [ Pass ].
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250431 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-09-27  John Wilander  <wilander@apple.com>
+
+            Storage Access API: document.hasStorageAccess() should return false by default
+            https://bugs.webkit.org/show_bug.cgi?id=202281
+            <rdar://problem/55718526>
+
+            Reviewed by Alex Christensen.
+
+            document.hasStorageAccess() should return false by default so that it only
+            returns true if the context has asked for and been granted storage access.
+
+            * NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
+            (WebKit::ResourceLoadStatisticsDatabaseStore::hasStorageAccess):
+            * NetworkProcess/Classifier/ResourceLoadStatisticsMemoryStore.cpp:
+            (WebKit::ResourceLoadStatisticsMemoryStore::hasStorageAccess):
+
+2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
+
         Cherry-pick r250416. rdar://problem/55954224
 
     SubFrameSOAuthorizationSession should ensure messages are posted in the right order to the parent frame
