Cherry-pick r250585. rdar://problem/56280995
    ObjectAllocationSinkingPhase shouldn't insert hints for allocations which are no longer valid
    https://bugs.webkit.org/show_bug.cgi?id=199361
    <rdar://problem/52454940>

    Reviewed by Yusuke Suzuki.

    JSTests:

    * stress/allocation-sinking-hints-are-valid-ssa-2.js: Added.
    (main.fn):
    (main.executor):
    (main):
    * stress/allocation-sinking-hints-are-valid-ssa.js: Added.
    (main.fn):
    (main.executor):
    (main):

    Source/JavaScriptCore:

    In a prior fix to the object allocation sinking phase, I added code where we
    made sure to insert PutHints over Phis for fields of an object at control flow
    merge points. However, that code didn't consider that the base of the PutHint
    may no longer be a valid heap location. This could cause us to emit invalid
    SSA code by referring to a node which does not dominate the PutHint location.
    This patch fixes the bug to only emit the PutHints when valid.

    This patch also makes it so that DFGValidate actually validates that the graph
    is in valid SSA form. E.g, any use of a node N must be dominated by N.

    * dfg/DFGObjectAllocationSinkingPhase.cpp:
    * dfg/DFGValidate.cpp:

    Canonical link: https://commits.webkit.org/215954@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250585 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.478@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@251335 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,5 +1,66 @@
 2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
 
+        Cherry-pick r250585. rdar://problem/56280995
+
+    ObjectAllocationSinkingPhase shouldn't insert hints for allocations which are no longer valid
+    https://bugs.webkit.org/show_bug.cgi?id=199361
+    <rdar://problem/52454940>
+    
+    Reviewed by Yusuke Suzuki.
+    
+    JSTests:
+    
+    * stress/allocation-sinking-hints-are-valid-ssa-2.js: Added.
+    (main.fn):
+    (main.executor):
+    (main):
+    * stress/allocation-sinking-hints-are-valid-ssa.js: Added.
+    (main.fn):
+    (main.executor):
+    (main):
+    
+    Source/JavaScriptCore:
+    
+    In a prior fix to the object allocation sinking phase, I added code where we
+    made sure to insert PutHints over Phis for fields of an object at control flow
+    merge points. However, that code didn't consider that the base of the PutHint
+    may no longer be a valid heap location. This could cause us to emit invalid
+    SSA code by referring to a node which does not dominate the PutHint location.
+    This patch fixes the bug to only emit the PutHints when valid.
+    
+    This patch also makes it so that DFGValidate actually validates that the graph
+    is in valid SSA form. E.g, any use of a node N must be dominated by N.
+    
+    * dfg/DFGObjectAllocationSinkingPhase.cpp:
+    * dfg/DFGValidate.cpp:
+    
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250585 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-01  Saam Barati  <sbarati@apple.com>
+
+            ObjectAllocationSinkingPhase shouldn't insert hints for allocations which are no longer valid
+            https://bugs.webkit.org/show_bug.cgi?id=199361
+            <rdar://problem/52454940>
+
+            Reviewed by Yusuke Suzuki.
+
+            In a prior fix to the object allocation sinking phase, I added code where we
+            made sure to insert PutHints over Phis for fields of an object at control flow
+            merge points. However, that code didn't consider that the base of the PutHint
+            may no longer be a valid heap location. This could cause us to emit invalid
+            SSA code by referring to a node which does not dominate the PutHint location.
+            This patch fixes the bug to only emit the PutHints when valid.
+
+            This patch also makes it so that DFGValidate actually validates that the graph
+            is in valid SSA form. E.g, any use of a node N must be dominated by N.
+
+            * dfg/DFGObjectAllocationSinkingPhase.cpp:
+            * dfg/DFGValidate.cpp:
+
+2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
+
         Cherry-pick r249959. rdar://problem/56280989
 
     CheckArray on DirectArguments/ScopedArguments does not filter out slow put array storage
