--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,51 @@
 2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
 
+        Cherry-pick r250755. rdar://problem/56061126
+
+    Use a better name than allowFastClicksEverywhere
+    https://bugs.webkit.org/show_bug.cgi?id=202607
+    <rdar://problem/55997133>
+    
+    Reviewed by Tim Horton.
+    
+    This preference name is quite confusing. Change it to
+    PreferFasterClickOverDoubleTap.
+    
+    * Shared/WebPreferences.yaml:
+    * Shared/WebPreferencesDefaultValues.h:
+    * UIProcess/WebPageProxy.h:
+    (WebKit::WebPageProxy::preferFasterClickOverDoubleTap const):
+    (WebKit::WebPageProxy::allowsFastClicksEverywhere const): Deleted.
+    * UIProcess/ios/WKContentViewInteraction.mm:
+    (-[WKContentView _handleSmartMagnificationInformationForPotentialTap:renderRect:fitEntireRect:viewportMinimumScale:viewportMaximumScale:]):
+    * UIProcess/ios/WebPageProxyIOS.mm:
+    (WebKit::WebPageProxy::effectiveContentModeAfterAdjustingPolicies):
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250755 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-04  Dean Jackson  <dino@apple.com>
+
+            Use a better name than allowFastClicksEverywhere
+            https://bugs.webkit.org/show_bug.cgi?id=202607
+            <rdar://problem/55997133>
+
+            Reviewed by Tim Horton.
+
+            This preference name is quite confusing. Change it to
+            PreferFasterClickOverDoubleTap.
+
+            * Shared/WebPreferences.yaml:
+            * Shared/WebPreferencesDefaultValues.h:
+            * UIProcess/WebPageProxy.h:
+            (WebKit::WebPageProxy::preferFasterClickOverDoubleTap const):
+            (WebKit::WebPageProxy::allowsFastClicksEverywhere const): Deleted.
+            * UIProcess/ios/WKContentViewInteraction.mm:
+            (-[WKContentView _handleSmartMagnificationInformationForPotentialTap:renderRect:fitEntireRect:viewportMinimumScale:viewportMaximumScale:]):
+            * UIProcess/ios/WebPageProxyIOS.mm:
+            (WebKit::WebPageProxy::effectiveContentModeAfterAdjustingPolicies):
+
+2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
+
         Cherry-pick r250751. rdar://problem/56280731
 
     Unreviewed, build fix after r250729
