--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,34 @@
+2019-10-15  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r250833. rdar://problem/56280706
+
+    Apply patch. rdar://problem/55920073
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608.3.10.1-branch@250833 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-08  Alan Coon  <alancoon@apple.com>
+
+            Apply patch. rdar://problem/55920073
+
+        2019-10-08  youenn fablet  <youenn@apple.com>
+
+                Remove the protection to spin more than one service worker process at a time.
+                rdar://problem/55044713
+
+                Before site isolation, we were creating one service worker process for all domains.
+                We now create one service worker process per domain, which makes the protection to only spin
+                one service worker process potentially harmful: if two requests to create a service worker processes
+                for two different domains are made, only one will actually succeed.
+                This is reproduced by API test.
+
+                At UIProcess side, there is already a check to see whether a service worker process for a given domain is launched.
+                That protects against spinning several service worker processes for the same domain.
+
+                * NetworkProcess/NetworkProcess.cpp:
+                (WebKit::NetworkProcess::createNetworkConnectionToWebProcess):
+                (WebKit::NetworkProcess::createServerToContextConnection):
+                * NetworkProcess/NetworkProcess.h:
+
 2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
 
         Cherry-pick r250780. rdar://problem/56061126
