--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,22 @@
+2019-10-15  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r250833. rdar://problem/56280706
+
+    Apply patch. rdar://problem/55920073
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608.3.10.1-branch@250833 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-08  Alan Coon  <alancoon@apple.com>
+
+            Apply patch. rdar://problem/55920073
+
+        2019-10-08  youenn fablet  <youenn@apple.com>
+
+                Remove the protection to spin more than one service worker process at a time.
+                rdar://problem/55044713
+
+                * TestWebKitAPI/Tests/WebKitCocoa/ServiceWorkerBasic.mm:
+
 2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
 
         Cherry-pick r250811. rdar://problem/56061121
