--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,5 +1,46 @@
 2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
 
+        Cherry-pick r250929. rdar://problem/56280990
+
+    RunResolver::rangeForRendererWithOffsets should check for range end
+    https://bugs.webkit.org/show_bug.cgi?id=202761
+    <rdar://problem/55917924>
+    
+    Reviewed by Antti Koivisto.
+    
+    Source/WebCore:
+    
+    This patch ensures that when rangeForRenderer comes back with a collapsed run (empty range), rangeForRendererWithOffsets returns an empty range as well.
+    
+    Test: fast/text/simple-line-layout-range-check-end.html
+    
+    * rendering/SimpleLineLayoutResolver.cpp:
+    (WebCore::SimpleLineLayout::RunResolver::rangeForRendererWithOffsets const):
+    
+    LayoutTests:
+    
+    * fast/text/simple-line-layout-range-check-end-expected.txt: Added.
+    * fast/text/simple-line-layout-range-check-end.html: Added.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250929 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-09  Zalan Bujtas  <zalan@apple.com>
+
+            RunResolver::rangeForRendererWithOffsets should check for range end
+            https://bugs.webkit.org/show_bug.cgi?id=202761
+            <rdar://problem/55917924>
+
+            Reviewed by Antti Koivisto.
+
+            This patch ensures that when rangeForRenderer comes back with a collapsed run (empty range), rangeForRendererWithOffsets returns an empty range as well.
+
+            Test: fast/text/simple-line-layout-range-check-end.html
+
+            * rendering/SimpleLineLayoutResolver.cpp:
+            (WebCore::SimpleLineLayout::RunResolver::rangeForRendererWithOffsets const):
+
+2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
+
         Cherry-pick r250811. rdar://problem/56061121
 
     Only wrapping CryptoKeys for IDB during serialization
