Cherry-pick r250844. rdar://problem/56061121
    Unreviewed, test gardening

    * TestExpectations:
    * platform/ios-simulator/TestExpectations:

    Canonical link: https://commits.webkit.org/216157@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250844 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.490@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@251347 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,23 @@
 2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
 
+        Cherry-pick r250844. rdar://problem/56061121
+
+    Unreviewed, test gardening
+    
+    * TestExpectations:
+    * platform/ios-simulator/TestExpectations:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250844 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-08  Jiewen Tan  <jiewen_tan@apple.com>
+
+            Unreviewed, test gardening
+
+            * TestExpectations:
+            * platform/ios-simulator/TestExpectations:
+
+2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
+
         Cherry-pick r250929. rdar://problem/56280990
 
     RunResolver::rangeForRendererWithOffsets should check for range end
