--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,76 @@
+2019-10-20  Babak Shafiei  <bshafiei@apple.com>
+
+        Apply patch. rdar://problem/56427498
+
+    2019-10-20  John Wilander  <wilander@apple.com>
+
+                Cherry-pick r251213. rdar://problem/56262708
+
+            Resource Load Statistics: Block all third-party cookies on websites without prior user interaction
+            https://bugs.webkit.org/show_bug.cgi?id=203017
+            <rdar://problem/56262708>
+
+            Reviewed by Alex Christensen.
+
+            The functional change is in WebCore::NetworkStorageSession::shouldBlockCookies() which is
+            called from:
+            - NetworkDataTaskCocoa::NetworkDataTaskCocoa()
+            - NetworkDataTaskCocoa::willPerformHTTPRedirection
+
+            shouldBlockCookies() now checks if the first-party website has received user interaction
+            and if not, blocks all third-party cookies, regardless of the status of those third-party
+            domains (prevalent or not).
+
+            The changes to ResourceLoadStatisticsDatabaseStore and ResourceLoadStatisticsMemoryStore
+            are about communicating which domains have received user interaction (prevalent or not)
+            to the network storage session so that it can enforce the new restriction.
+
+            The C API change and piping through the WebsiteDataStore is test infrastructure.
+
+            * NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
+            (WebKit::ResourceLoadStatisticsDatabaseStore::clear):
+            (WebKit::ResourceLoadStatisticsDatabaseStore::updateCookieBlocking):
+            * NetworkProcess/Classifier/ResourceLoadStatisticsMemoryStore.cpp:
+            (WebKit::ResourceLoadStatisticsMemoryStore::logUserInteraction):
+            (WebKit::ResourceLoadStatisticsMemoryStore::clear):
+            (WebKit::ResourceLoadStatisticsMemoryStore::updateCookieBlocking):
+            * NetworkProcess/Classifier/ResourceLoadStatisticsStore.cpp:
+            (WebKit::ResourceLoadStatisticsStore::updateCookieBlockingForDomains):
+            * NetworkProcess/Classifier/ResourceLoadStatisticsStore.h:
+            * NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
+            (WebKit::WebResourceLoadStatisticsStore::callUpdatePrevalentDomainsToBlockCookiesForHandler):
+            (WebKit::WebResourceLoadStatisticsStore::scheduleCookieBlockingUpdateForDomains): Deleted.
+            (WebKit::WebResourceLoadStatisticsStore::scheduleClearBlockingStateForDomains): Deleted.
+            * NetworkProcess/Classifier/WebResourceLoadStatisticsStore.h:
+            (WebKit::RegistrableDomainsToBlockCookiesFor::isolatedCopy const):
+            * NetworkProcess/NetworkProcess.cpp:
+            (WebKit::NetworkProcess::setShouldBlockThirdPartyCookiesForTesting):
+            * NetworkProcess/NetworkProcess.h:
+            * NetworkProcess/NetworkProcess.messages.in:
+            * NetworkProcess/NetworkSession.h:
+            * NetworkProcess/NetworkSessionCreationParameters.cpp:
+            (WebKit::NetworkSessionCreationParameters::privateSessionParameters):
+            (WebKit::NetworkSessionCreationParameters::encode const):
+            (WebKit::NetworkSessionCreationParameters::decode):
+            * NetworkProcess/NetworkSessionCreationParameters.h:
+            * NetworkProcess/cocoa/NetworkSessionCocoa.mm:
+            (WebKit::NetworkSessionCocoa::NetworkSessionCocoa):
+            * Shared/WebPreferences.yaml:
+            * UIProcess/API/C/WKWebsiteDataStoreRef.cpp:
+            (WKWebsiteDataStoreSetResourceLoadStatisticsShouldBlockThirdPartyCookiesForTesting):
+            (WKWebsiteDataStoreStatisticsResetToConsistentState):
+            * UIProcess/API/C/WKWebsiteDataStoreRef.h:
+            * UIProcess/Network/NetworkProcessProxy.cpp:
+            (WebKit::NetworkProcessProxy::setShouldBlockThirdPartyCookiesForTesting):
+            * UIProcess/Network/NetworkProcessProxy.h:
+            * UIProcess/WebProcessPool.cpp:
+            (WebKit::WebProcessPool::ensureNetworkProcess):
+            * UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm:
+            (WebKit::WebsiteDataStore::parameters):
+            * UIProcess/WebsiteData/WebsiteDataStore.cpp:
+            (WebKit::WebsiteDataStore::setResourceLoadStatisticsShouldBlockThirdPartyCookiesForTesting):
+            * UIProcess/WebsiteData/WebsiteDataStore.h:
+
 2019-10-17  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r250589. rdar://problem/55927251
