Cherry-pick r251388. rdar://56579651
    Move ElementContext from WebKit to WebCore
    https://bugs.webkit.org/show_bug.cgi?id=203210
    <rdar://problem/56475682>

    Reviewed by Simon Fraser.

Canonical link: https://commits.webkit.org/213666.501@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@251576 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,13 @@
+2019-10-25  Dean Jackson  <dino@apple.com>
+
+        Cherry-pick r251388. rdar://56579651
+
+    Move ElementContext from WebKit to WebCore
+    https://bugs.webkit.org/show_bug.cgi?id=203210
+    <rdar://problem/56475682>
+
+    Reviewed by Simon Fraser.
+
 2019-10-20  Babak Shafiei  <bshafiei@apple.com>
 
         Cherry-pick r250773. rdar://problem/56271900
