Cherry-pick r251390. rdar://56579651
    Dispatch AR event on the originating anchor element
    https://bugs.webkit.org/show_bug.cgi?id=203198
    <rdar://55743929>

    Reviewed by Simon Fraser.

    Source/WebCore:

    Expose an ElementContext on the SystemPreviewInfo, so that
    when something happens in the AR QuickLook an event can be
    fired on the originating <a> element.

    * dom/Document.cpp:
    (WebCore::Document::dispatchSystemPreviewActionEvent): Make sure
    we dispatch only to the HTMLAnchorElement.
    * dom/Document.h:
    * html/HTMLAnchorElement.cpp:
    (WebCore::HTMLAnchorElement::handleClick):
    * loader/FrameLoaderTypes.h:
    (WebCore::SystemPreviewInfo::encode const):
    (WebCore::SystemPreviewInfo::decode):
    * testing/Internals.cpp:
    (WebCore::Internals::elementIdentifier const):
    * testing/Internals.h:
    * testing/Internals.idl:

    Source/WebKit:

    Use the ElementContext on SystemPreviewInfo.

    * UIProcess/API/Cocoa/WKWebView.mm:
    (-[WKWebView _triggerSystemPreviewActionOnElement:frame:page:]):
    (-[WKWebView _triggerSystemPreviewActionOnFrame:page:]): Deleted.
    * UIProcess/API/Cocoa/WKWebViewPrivate.h:
    * UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:
    * UIProcess/SystemPreviewController.h:
    * WebProcess/WebPage/WebPage.cpp:
    (WebKit::WebPage::systemPreviewActionTriggered):

    Tools:

    Improve this test, most importantly so that it
    actually works :)

    Retrieve the ElementIdentifier for the <a> element,
    and trigger a system preview action on it.

    * TestWebKitAPI/Tests/WebKitCocoa/SystemPreview.mm:
    (-[TestSystemPreviewTriggeredHandler userContentController:didReceiveScriptMessage:]):
    (TestWebKitAPI::TEST):
    * TestWebKitAPI/Tests/WebKitCocoa/system-preview-trigger.html:

Canonical link: https://commits.webkit.org/213666.502@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@251578 268f45cc-cd09-0410-ab3c-d52691b4d

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,26 @@
+2019-10-21  Dean Jackson  <dino@apple.com>
+
+        Cherry-pick r251390. rdar://56579651
+
+    2019-10-21  Dean Jackson  <dino@apple.com>
+
+            Dispatch AR event on the originating anchor element
+            https://bugs.webkit.org/show_bug.cgi?id=203198
+            <rdar://55743929>
+
+            Reviewed by Simon Fraser.
+
+            Use the ElementContext on SystemPreviewInfo.
+
+            * UIProcess/API/Cocoa/WKWebView.mm:
+            (-[WKWebView _triggerSystemPreviewActionOnElement:frame:page:]):
+            (-[WKWebView _triggerSystemPreviewActionOnFrame:page:]): Deleted.
+            * UIProcess/API/Cocoa/WKWebViewPrivate.h:
+            * UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:
+            * UIProcess/SystemPreviewController.h:
+            * WebProcess/WebPage/WebPage.cpp:
+            (WebKit::WebPage::systemPreviewActionTriggered):
+
 2019-10-25  Dean Jackson  <dino@apple.com>
 
         Cherry-pick r251388. rdar://56579651
